test/conformance/kuttl/mutate/e2e/foreach-patchStrategicMerge-preconditions/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: replace-docker-hub
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
