test/conformance/kuttl/mutate/e2e/foreach-patchStrategicMerge-preconditions/resource-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: my-private-registry/nginx:1.14.2
